--- a/src/globalConfig/_variable.css
+++ b/src/globalConfig/_variable.css
@@ -2,6 +2,7 @@
     --black-color:#040404;
     --red-color:#bf000a;
     --text-color:#d1d0cf;
+    --gray-color:#6c757d;
 
     --header-height:70px;
 }
